tests/transpiler/x/zig/cast_struct.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/cast_struct.zig:6:61: error: no field named 'title' in struct 'hash_map.HashMap([]const u8,[]const u8,hash_map.StringContext,80)'
/root/.local/share/mise/installs/zig/0.12.0/lib/std/hash_map.zig:366:12: note: struct declared here
