tests/transpiler/x/zig/cast_struct.zig
// Generated by Mochi Zig transpiler on 2025-07-21 11:40 +0000
const std = @import("std");

pub fn main() void {
    const todo = blk: { var m = std.StringHashMap([]const u8).init(std.heap.page_allocator); m.put("title", "hi") catch unreachable; break :blk m; };
    try std.io.getStdOut().writer().print("{any}\n", .{todo.title});
}
